Some functionality working

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "midi": "1.0.0",
     "nconf": "0.11.2",
-    "osc": "2.4.1"
+    "osc": "2.4.1",
+    "inquirer": "^8.2.0"
   }
 }
